Bug 347257 - place icons for baloo kio
Summary: place icons for baloo kio
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: places (show other bugs)
Version: 16.12.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL: https://dl.dropboxusercontent.com/u/1...
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2015-05-05 20:38 UTC by andreas_k
Modified: 2015-07-27 20:32 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed In: 15.08.0


Attachments
dolphin side bar with breeze icon theme (128.98 KB, image/png)
2015-05-05 20:41 UTC, andreas_k
Details
Patch to change the quoted sections as described by andreas_k (1.64 KB, patch)
2015-07-01 00:53 UTC, Christian Butcher
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andreas_k 2015-05-05 20:38:11 UTC
there are places icons for 
- documents (folder-documents)
- picture (folder-pictures)
- audio files (folder-music)
- video (folder videos)
this icons should be used in the baloo kio not only the audio files places icon.

Reproducible: Always
Comment 1 andreas_k 2015-05-05 20:41:50 UTC
Created attachment 92440 [details]
dolphin side bar with breeze icon theme
Comment 2 Emmanuel Pescosta 2015-05-28 18:05:05 UTC
Thanks for the bug report!

I have added a todo on kanboard: https://todo.kde.org/?controller=task&action=readonly&task_id=1309&token=da7df1fc1ad28020080cefb8a760d1f78b855d01fdac13e641bfede89c97
Comment 3 andreas_k 2015-06-18 11:32:05 UTC
Ok I know how to solve this bug.

In dolphin the wrong icons (not according to freedesktop.org standard) were uses please change:

folder-txt => folder-text
folder-video => folder-videos
folder-images => folder-image

I work for the icons and don't have the knowledge to know where I have to change this in the code base.
Comment 4 Christian Butcher 2015-07-01 00:49:02 UTC
In the Dolphin source, under ./src/panels/places/placesitemmodel.cpp, there are (at around line 920) 3 sets of lines, with "folder-txt", "folder-image", and "folder-video". Can you confirm you wanted "folder-image" -> "folder-images", instead of the other way around?

In any case, that's the only use of these terms in the sources.
Comment 5 Christian Butcher 2015-07-01 00:53:18 UTC
Created attachment 93437 [details]
Patch to change the quoted sections as described by andreas_k

I don't know if this makes anything better/worse - but here it is to save time for others making the change if interested
Comment 6 andreas 2015-07-01 20:45:23 UTC
thank you very much for replace the used icons to the opendesktop specification. In between I add the "wrong" icons to the kde git repository. So we have solve the problem thanks.
Comment 7 Emmanuel Pescosta 2015-07-27 20:32:52 UTC
Git commit 52136255d86cfdf4bcfcd865bfa14cdd481b3a77 by Emmanuel Pescosta, on behalf of Christian Butcher.
Committed on 27/07/2015 at 20:32.
Pushed by emmanuelp into branch 'Applications/15.08'.

Change the Dolphin places icons:
* folder-txt => folder-text
* folder-video => folder-videos
* folder-image => folder-images

Thanks to andreas_k and Christian Butcher!
FIXED-IN: 15.08.0

M  +3    -3    src/panels/places/placesitemmodel.cpp

http://commits.kde.org/dolphin/52136255d86cfdf4bcfcd865bfa14cdd481b3a77