Change the Dolphin places icons: * folder-txt => folder-text * folder-video => folder-videos * folder-image => folder-images

Thanks to andreas_k and Christian Butcher!

BUG: 347257
FIXED-IN: 15.08.0